--- a/HeromeApp/HeromeApp/HeromeApp.Android/HeromeApp.Android.csproj
+++ b/HeromeApp/HeromeApp/HeromeApp.Android/HeromeApp.Android.csproj
@@ -114,5 +114,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\icon_twitter.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\background_login.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
