--- a/HeromeApp/HeromeApp/HeromeApp.Android/HeromeApp.Android.csproj
+++ b/HeromeApp/HeromeApp/HeromeApp.Android/HeromeApp.Android.csproj
@@ -57,9 +57,9 @@
     <PackageReference Include="Xamarin.Android.Support.v7.MediaRouter" Version="27.0.2.1" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HeromeBoxViewRenderer.cs" />
-    <Compile Include="HeromeButtonRenderer.cs" />
-    <Compile Include="HeromeImageEntryRenderer.cs" />
+    <Compile Include="Renderers\HeromeBoxViewRenderer.cs" />
+    <Compile Include="Renderers\HeromeButtonRenderer.cs" />
+    <Compile Include="Renderers\HeromeImageEntryRenderer.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
