--- a/HeromeApp/HeromeApp/HeromeApp.Android/HeromeApp.Android.csproj
+++ b/HeromeApp/HeromeApp/HeromeApp.Android/HeromeApp.Android.csproj
@@ -117,5 +117,20 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\background_login.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\icon_menu.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\panel_cuticles.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\panel_hands.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\panel_nails.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\panel_polish.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
