Add rounded image controls for home page and modify layout padding for both login and home pages

--- a/HeromeApp/HeromeApp/HeromeApp.Android/HeromeApp.Android.csproj
+++ b/HeromeApp/HeromeApp/HeromeApp.Android/HeromeApp.Android.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Renderers\HeromeButtonRenderer.cs" />
     <Compile Include="Renderers\HeromeImageEntryRenderer.cs" />
     <Compile Include="MainActivity.cs" />
+    <Compile Include="Renderers\HeromeImageRenderer.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
