--- a/HeromeApp/HeromeApp/HeromeApp.Android/HeromeApp.Android.csproj
+++ b/HeromeApp/HeromeApp/HeromeApp.Android/HeromeApp.Android.csproj
@@ -62,6 +62,8 @@
     <Compile Include="Renderers\HeromeImageEntryRenderer.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Renderers\HeromeImageRenderer.cs" />
+    <Compile Include="Renderers\HeromeListViewRenderer.cs" />
+    <Compile Include="Renderers\HeromeViewCellRenderer.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
