--- a/HeromeApp/HeromeApp/HeromeApp/HeromeApp.csproj
+++ b/HeromeApp/HeromeApp/HeromeApp/HeromeApp.csproj
@@ -29,6 +29,9 @@
     <EmbeddedResource Update="NailsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="ProductPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\HeromeQuestionaireView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
